--- a/First Posiiton/Multiple Weeks/index.html
+++ b/First Posiiton/Multiple Weeks/index.html
@@ -4,246 +4,501 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reaching First Position</title>
+    <style>
+      /* Global Styles */
+      html {
+        font-size: 10px;
+      }
+      body {
+        font-family: Verdana;
+        margin: 0;
+        padding: 0;
+        color: black;
+      }
+      .container {
+        padding: 25px;
+      }
+      /* Logo Container */
+      .logo-container {
+        width: 280px;
+        height: 54px;
+        margin-bottom: 20px;
+      }
+      .logo-container img {
+        height: 100%;
+        width: 100%;
+      }
+      /* Upper Card */
+      .upper-card {
+        border: 1px solid #e2e8f0;
+        border-bottom: 2px dashed;
+        border-radius: 10px 10px 0 0;
+        background-color: #e2f1fc;
+        padding: 40px 24px 24px 24px;
+        text-align: center;
+      }
+      .title {
+        font-size: 24px;
+        font-weight: 400;
+        line-height: 36px;
+        margin: auto;
+      }
+      .position {
+        font-size: 60px;
+        font-weight: 700;
+        line-height: 100%;
+        color: #0691ef;
+        margin: auto;
+      }
+      .duration {
+        font-size: 24px;
+        font-weight: 400;
+        line-height: 36px;
+        margin: auto;
+        margin-bottom: 10px;
+      }
+      .duration span {
+        font-weight: 600;
+      }
+      .description {
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 24px;
+        max-width: 618px;
+        margin: auto;
+        text-align: center;
+      }
+      /* Lower Card */
+      .lower-card {
+        border: 1px solid #e2e8f0;
+        border-top: none;
+        border-radius: 0 0 10px 10px;
+        padding: 24px;
+      }
+      /* Domain Container */
+      .domain-container {
+        font-size: 14px;
+        font-weight: 600;
+        line-height: 21px;
+        margin-bottom: 15px;
+      }
+      .domain-pill {
+        border: 1px solid;
+        padding: 8px 12px;
+        border-radius: 6px;
+        margin-right: 16px;
+        display: inline-flex;
+        align-items: center;
+        margin-bottom: 10px;
+        color: black;
+        text-wrap: nowrap;
+      }
+      .domain-pill span:first-child {
+        color: #757575;
+        margin-right: 10px;
+      }
+
+      .domain-pill span {
+        margin-right: 10px;
+      }
+      .domain-pill img {
+        width: 20px;
+        height: 20px;
+        margin-right: 5px;
+        vertical-align: middle;
+      }
+      .domain-pill .extra-space {
+        padding-left: 10px;
+        border-left: 1px solid #e2e8f0;
+      }
+      /* Table Styles */
+      .table-container {
+        overflow: hidden; /* Ensures rounded corners display without cutting */
+        border-radius: 10px 10px 0 0;
+      }
+
+      .table-container table {
+        border-collapse: collapse;
+        text-align: left;
+        width: 100%;
+      }
+
+      .table-container th:first-child {
+        border-top-left-radius: 10px;
+      }
+
+      .table-container th:last-child {
+        border-top-right-radius: 10px;
+      }
+
+      .table-container th,
+      .table-container td {
+        border: 1px solid #e2e8f0;
+        padding: 16px 24px;
+      }
+
+      .table-container th {
+        font-size: 14px;
+        font-weight: 600;
+        line-height: 21px;
+        text-transform: uppercase;
+        background-color: #e2f1fc;
+      }
+
+      .table-container td {
+        font-size: 16px;
+        font-weight: 500;
+        line-height: 24px;
+      }
+
+      .keyword-cell {
+        font-weight: 600;
+      }
+
+      button.check-ranking {
+        width: 100%;
+        padding: 4px 8px;
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 24px;
+        border: none;
+        border-radius: 6px;
+        background-color: #0691ef;
+        color: white;
+        height: 40px;
+        cursor: pointer;
+      }
+
+      .footer {
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 24px;
+      }
+
+      /* Media quries */
+
+      /* Extra small devices (phones, 0px and up) */
+      @media (max-width: 576px) {
+        .container {
+          padding: 15px;
+        }
+        .logo-container {
+          width: 200px;
+          height: 40px;
+          margin-bottom: 15px;
+        }
+        .upper-card {
+          padding: 20px 15px;
+        }
+        .title {
+          font-size: 20px;
+          line-height: 30px;
+        }
+        .position {
+          font-size: 40px;
+        }
+        .duration {
+          font-size: 20px;
+          line-height: 30px;
+          margin-bottom: 8px;
+        }
+        .description {
+          font-size: 14px;
+          line-height: 20px;
+          max-width: 100%;
+          padding: 0 10px;
+        }
+        .lower-card {
+          padding: 15px;
+        }
+        .domain-container {
+          font-size: 12px;
+          line-height: 18px;
+        }
+        .domain-pill {
+          padding: 6px 8px;
+          margin-right: 10px;
+        }
+        .domain-pill img {
+          width: 16px;
+          height: 16px;
+          margin-right: 4px;
+        }
+        .table-container th,
+        .table-container td {
+          padding: 10px 12px;
+        }
+        .table-container th {
+          font-size: 12px;
+          line-height: 18px;
+        }
+        .table-container td {
+          font-size: 14px;
+          line-height: 20px;
+        }
+        button.check-ranking {
+          padding: 3px 6px;
+          font-size: 14px;
+          height: 35px;
+        }
+        .footer {
+          font-size: 14px;
+          line-height: 20px;
+        }
+      }
+
+      /* Small devices (tablets, 576px and up) */
+      @media (min-width: 576px) and (max-width: 768px) {
+        .container {
+          padding: 20px;
+        }
+        .logo-container {
+          width: 220px;
+          height: 45px;
+          margin-bottom: 18px;
+        }
+        .upper-card {
+          padding: 30px 20px;
+        }
+        .title {
+          font-size: 22px;
+          line-height: 32px;
+        }
+        .position {
+          font-size: 50px;
+        }
+        .duration {
+          font-size: 22px;
+          line-height: 32px;
+          margin-bottom: 9px;
+        }
+        .description {
+          font-size: 15px;
+          line-height: 22px;
+        }
+        .lower-card {
+          padding: 18px;
+        }
+        .domain-container {
+          font-size: 13px;
+          line-height: 19px;
+        }
+        .domain-pill {
+          padding: 7px 10px;
+        }
+        .table-container th,
+        .table-container td {
+          padding: 12px 20px;
+        }
+        .table-container th {
+          font-size: 13px;
+          line-height: 20px;
+        }
+        .table-container td {
+          font-size: 15px;
+          line-height: 22px;
+        }
+        button.check-ranking {
+          font-size: 15px;
+          height: 38px;
+        }
+        .footer {
+          font-size: 15px;
+          line-height: 22px;
+        }
+      }
+
+      /* Medium devices (desktops, 768px and up) */
+      @media (min-width: 768px) and (max-width: 992px) {
+        .container {
+          padding: 25px;
+        }
+        .logo-container {
+          width: 240px;
+          height: 48px;
+          margin-bottom: 20px;
+        }
+        .upper-card {
+          padding: 35px 22px;
+        }
+        .title {
+          font-size: 23px;
+          line-height: 34px;
+        }
+        .position {
+          font-size: 55px;
+        }
+        .duration {
+          font-size: 23px;
+          line-height: 34px;
+        }
+        .description {
+          font-size: 15px;
+          line-height: 22px;
+        }
+        .lower-card {
+          padding: 20px;
+        }
+        .domain-container {
+          font-size: 13px;
+          line-height: 20px;
+        }
+        .domain-pill {
+          padding: 7px 12px;
+        }
+        .table-container th,
+        .table-container td {
+          padding: 14px 22px;
+        }
+        button.check-ranking {
+          font-size: 15px;
+          height: 38px;
+        }
+      }
+
+      /* Large devices (large desktops, 992px and up) */
+      @media (min-width: 992px) {
+        .container {
+          padding: 30px;
+        }
+        .logo-container {
+          width: 280px;
+          height: 54px;
+        }
+        .upper-card {
+          padding: 40px 24px;
+        }
+        .title {
+          font-size: 24px;
+          line-height: 36px;
+        }
+        .position {
+          font-size: 60px;
+        }
+        .duration {
+          font-size: 24px;
+          line-height: 36px;
+        }
+        .description {
+          font-size: 16px;
+          line-height: 24px;
+        }
+        .lower-card {
+          padding: 24px;
+        }
+        .domain-container {
+          font-size: 14px;
+          line-height: 21px;
+        }
+        .table-container th,
+        .table-container td {
+          padding: 16px 24px;
+        }
+        button.check-ranking {
+          font-size: 16px;
+          height: 40px;
+        }
+        .footer {
+          font-size: 16px;
+          line-height: 24px;
+        }
+      }
+    </style>
   </head>
-  <body style="font-family: Verdana; margin: 0px; padding: 0px; color: #212121">
-    <div class="container" style="padding: 25px">
+  <body>
+    <div class="container">
       <!-- Logo -->
-      <div
-        class="logo-container"
-        style="width: 280px; height: 54px; margin-bottom: 20px"
-      >
+      <div class="logo-container">
         <img
           src="https://res.cloudinary.com/dyqzbz8jk/image/upload/v1728989091/IG_COLOR_WHITE_BG_V2_2x_1_enhanced_vnknup.png"
-          alt=""
-          style="height: 100%; width: 100%"
+          alt="Logo"
         />
       </div>
       <!-- Main -->
       <div class="main">
         <!-- Upper Card -->
-        <div
-          class="upper-card"
-          style="
-            border: 1px solid #e2e8f0;
-            border-bottom: 2px dashed;
-            border-radius: 10px 10px 0 0;
-            background-color: #e2f1fc;
-            padding: 40px 24px 24px 24px;
-          "
-        >
-          <div
-            style="
-              font-size: 24px;
-              font-style: normal;
-              font-weight: 400;
-              line-height: 36px;
-              width: fit-content;
-              margin: auto;
-            "
-          >
-            Your keywords stayed at
-          </div>
-          <div
-            style="
-              font-size: 60px;
-              font-style: normal;
-              font-weight: 700;
-              line-height: 100%;
-              color: #0691ef;
-              width: fit-content;
-              margin: auto;
-            "
-          >
-            1st
-          </div>
-          <div
-            style="
-              font-size: 24px;
-              font-style: normal;
-              font-weight: 400;
-              line-height: 36px;
-              width: fit-content;
-              margin: auto;
-              margin-bottom: 10px;
-            "
-          >
-            for <span style="font-weight: 600">3 weeks!</span>
-          </div>
-          <div
-            style="
-              font-size: 16px;
-              font-style: normal;
-              font-weight: 500;
-              line-height: 24px;
-              width: 618px;
-              margin: auto;
-              text-align: center;
-            "
-          >
+        <div class="upper-card">
+          <div class="title">Your keywords stayed at</div>
+          <div class="position">1st</div>
+          <div class="duration">for <span>3 weeks!</span></div>
+          <div class="description">
             Consistency is key, and you’ve proven that your strategy is working.
             Continue refining your approach to maintain your rankings!
           </div>
         </div>
         <!-- Lower card -->
-        <div
-          class="lower-card"
-          style="
-            border: 1px solid #e2e8f0;
-            border-top: none;
-            border-radius: 0 0 10px 10px;
-            padding: 24px;
-          "
-        >
+        <div class="lower-card">
           <!-- Domain pill container -->
-          <div
-            class="domain-container"
-            style="
-              font-size: 14px;
-              font-style: normal;
-              font-weight: 600;
-              line-height: 21px;
-              margin-bottom: 25px;
-            "
-          >
-            <span
-              style="
-                border: 1px solid;
-                padding: 8px 12px;
-                border-radius: 6px;
-                margin-right: 16px;
-              "
-            >
-              <span style="color: #757575; margin-right: 5px"> Project: </span>
+          <div class="domain-container">
+            <span class="domain-pill">
+              <span> Project: </span>
               <img
                 src="https://res.cloudinary.com/dyqzbz8jk/image/upload/v1729773942/Infidigit_Favicon_1_1_a44ogn.png"
-                alt=""
-                style="
-                  width: 20px;
-                  height: 20px;
-                  margin-right: 5px;
-                  margin-bottom: -3px;
-                "
+                alt="Project Logo"
               />
               <span>Infidigit SEO India</span>
             </span>
-            <span
-              style="
-                border: 1px solid;
-                padding: 8px 12px;
-                border-radius: 6px;
-                margin-right: 16px;
-              "
-            >
-              <span style="color: #757575; margin-right: 5px">Campaign:</span>
+            <span class="domain-pill">
+              <span>Campaign:</span>
               <img
                 src="https://res.cloudinary.com/dyqzbz8jk/image/upload/v1727179534/rtpiroqhzp0ugaci1hwd.png"
-                alt=""
-                style="
-                  width: 20px;
-                  height: 20px;
-                  margin-right: 5px;
-                  margin-bottom: -4px;
-                "
+                alt="Flag"
               />
               <img
                 src="https://res.cloudinary.com/dyqzbz8jk/image/upload/v1726837825/f6rca5v86tlzkxuuzujb.png"
-                alt=""
-                style="
-                  width: 25px;
-                  height: 20px;
-                  margin-right: 5px;
-                  margin-bottom: -4px;
-                "
+                alt="Flag 2"
+                style="width: 25px"
               />
-              <span style="margin-right: 5px">India</span>
+              <span>India</span>
               <img
                 src="https://res.cloudinary.com/duf9yozqh/image/upload/v1729778369/FirstAddon_iqsphe.png"
-                alt=""
-                style="
-                  width: 20px;
-                  height: 20px;
-                  margin-right: 5px;
-                  margin-bottom: -4px;
-                  padding-left: 10px;
-                  border-left: 1px solid #e2e8f0;
-                "
+                alt="Device Icon"
+                class="extra-space"
               />
               <span>Desktop</span>
             </span>
           </div>
-
           <!-- Table -->
           <div class="table-container">
-            <table
-              style="border-collapse: collapse; text-align: left; width: 100%"
-            >
-              <tr
-                style="
-                  border: 1px solid #e2e8f0;
-                  font-size: 14px;
-                  font-style: normal;
-                  font-weight: 600;
-                  line-height: 21px;
-                  text-transform: uppercase;
-                  background-color: #e2f1fc;
-                  border-radius: 10px 10px 0 0;
-                "
-              >
-                <th style="width: 243px; padding: 16px 24px">Keywords</th>
-                <th style="width: 144px; padding: 16px 24px">Search Volume</th>
-                <th style="width: 86px; padding: 16px 24px">rank</th>
-                <th style="width: 144px; padding: 16px 24px">duration</th>
+            <table>
+              <tr>
+                <th>Keywords</th>
+                <th>Search Volume</th>
+                <th>Rank</th>
+                <th>Duration</th>
               </tr>
-              <tr
-                style="
-                  font-size: 16px;
-                  font-style: normal;
-                  font-weight: 500;
-                  line-height: 24px;
-                "
-              >
-                <td
-                  style="
-                    border: 1px solid #e2e8f0;
-                    font-weight: 600;
-                    width: 243px;
-                    padding: 16px 24px;
-                  "
-                >
-                  seo books
-                </td>
-                <td
-                  style="
-                    border: 1px solid #e2e8f0;
-                    width: 144px;
-                    padding: 16px 24px;
-                  "
-                >
-                  223,098
-                </td>
-                <td
-                  style="
-                    border: 1px solid #e2e8f0;
-                    width: 86px;
-                    padding: 16px 24px;
-                  "
-                >
-                  1
-                </td>
-                <td
-                  style="
-                    border: 1px solid #e2e8f0;
-                    width: 144px;
-                    padding: 16px 24px;
-                  "
-                >
-                  3 Weeks
+              <tr>
+                <td class="keyword-cell">seo books</td>
+                <td>223,098</td>
+                <td>1</td>
+                <td>3 Weeks</td>
+              </tr>
+              <tr>
+                <td class="keyword-cell">seo books</td>
+                <td>223,098</td>
+                <td>1</td>
+                <td>3 Weeks</td>
+              </tr>
+              <tr>
+                <td class="keyword-cell">seo books</td>
+                <td>223,098</td>
+                <td>1</td>
+                <td>3 Weeks</td>
+              </tr>
+              <tr class="button-row">
+                <td colspan="4">
+                  <button class="check-ranking">
+                    Check Your Keyword Rankings Now
+                  </button>
                 </td>
               </tr>
-              <tr></tr>
-              <tr></tr>
-              <tr></tr>
             </table>
+          </div>
+          <!-- Footer -->
+          <div class="footer">
+            <p>Best, <br />The Infigrowth Team</p>
           </div>
         </div>
       </div>
