font-family fixed to verdana

--- a/First Posiiton/Multiple Weeks/index.html
+++ b/First Posiiton/Multiple Weeks/index.html
@@ -10,7 +10,6 @@
         font-size: 10px;
       }
       body {
-        font-family: Verdana;
         margin: 0;
         padding: 0;
         color: black;
@@ -407,7 +406,7 @@
       }
     </style>
   </head>
-  <body>
+  <body style="font-family: Verdana, sans-serif">
     <div class="container">
       <!-- Logo -->
       <div class="logo-container">
