--- a/First Posiiton/Multiple Weeks/index.html
+++ b/First Posiiton/Multiple Weeks/index.html
@@ -152,6 +152,11 @@
 
       .keyword-cell {
         font-weight: 600;
+        max-width: 250px; /* Set a max width for the ellipsis effect */
+        overflow: hidden; /* Hide overflow */
+        text-wrap: nowrap;
+        white-space: nowrap; /* Prevent text from wrapping */
+        text-overflow: ellipsis; /* Show ellipsis */
       }
 
       button.check-ranking {
@@ -241,6 +246,9 @@
           padding: 3px 6px;
           font-size: 14px;
           height: 35px;
+        }
+        .keyword-cell {
+          max-width: 100px;
         }
         .footer {
           font-size: 14px;
@@ -470,18 +478,26 @@
               </tr>
               <tr>
                 <td class="keyword-cell">seo books</td>
+                <td>220,987</td>
+                <td>1</td>
+                <td>3 Weeks</td>
+              </tr>
+              <tr>
+                <td class="keyword-cell">seo</td>
                 <td>223,098</td>
                 <td>1</td>
                 <td>3 Weeks</td>
               </tr>
               <tr>
-                <td class="keyword-cell">seo books</td>
+                <td class="keyword-cell">service</td>
                 <td>223,098</td>
                 <td>1</td>
                 <td>3 Weeks</td>
               </tr>
               <tr>
-                <td class="keyword-cell">seo books</td>
+                <td class="keyword-cell">
+                  pneumonoultramicroscopicsilicovolcanoconiosis
+                </td>
                 <td>223,098</td>
                 <td>1</td>
                 <td>3 Weeks</td>
