--- a/First Posiiton/Multiple Weeks/index.html
+++ b/First Posiiton/Multiple Weeks/index.html
@@ -414,7 +414,7 @@
       }
     </style>
   </head>
-  <body style="font-family: Verdana, sans-serif">
+  <body style="font-family: Verdana, sans-serif; color: black">
     <div class="container">
       <!-- Logo -->
       <div class="logo-container">
