Keywords font weight fixed

--- a/First Posiiton/Multiple Weeks/index.html
+++ b/First Posiiton/Multiple Weeks/index.html
@@ -150,6 +150,10 @@
         line-height: 24px;
       }
 
+      tr td:first-child {
+        font-weight: 600;
+      }
+
       .keyword-cell {
         font-weight: 600;
         max-width: 250px; /* Set a max width for the ellipsis effect */
