--- a/First Posiiton/Multiple Weeks/index.html
+++ b/First Posiiton/Multiple Weeks/index.html
@@ -150,12 +150,8 @@
         line-height: 24px;
       }
 
-      tr td:first-child {
-        font-weight: 600;
-      }
-
       .keyword-cell {
-        font-weight: 600;
+        font-weight: 600 !important;
         max-width: 250px; /* Set a max width for the ellipsis effect */
         overflow: hidden; /* Hide overflow */
         text-wrap: nowrap;
