Attempted to add background row color

--- a/First Posiiton/Multiple Weeks/index.html
+++ b/First Posiiton/Multiple Weeks/index.html
@@ -161,6 +161,10 @@
         line-height: 24px;
       }
 
+      .table-container tr:nth-child(odd):not(:first-child):not(.button-row) {
+        background-color: #f7fcff;
+      }
+
       .keyword-cell {
         font-weight: 600 !important;
         max-width: 250px; /* Set a max width for the ellipsis effect */
