--- a/First Posiiton/Multiple Weeks/index.html
+++ b/First Posiiton/Multiple Weeks/index.html
@@ -161,10 +161,6 @@
         line-height: 24px;
       }
 
-      .table-container tr:nth-child(odd):not(:first-child):not(.button-row) {
-        background-color: #f7fcff;
-      }
-
       .keyword-cell {
         font-weight: 600 !important;
         max-width: 250px; /* Set a max width for the ellipsis effect */
@@ -497,7 +493,7 @@
                 <td>1</td>
                 <td>3 Weeks</td>
               </tr>
-              <tr>
+              <tr style="background-color: #f7fcff">
                 <td class="keyword-cell">seo</td>
                 <td>223,098</td>
                 <td>1</td>
@@ -509,7 +505,7 @@
                 <td>1</td>
                 <td>3 Weeks</td>
               </tr>
-              <tr>
+              <tr style="background-color: #f7fcff">
                 <td class="keyword-cell">
                   pneumonoultramicroscopicsilicovolcanoconiosis
                 </td>
