--- a/Feature Snippet/index.html
+++ b/Feature Snippet/index.html
@@ -27,7 +27,7 @@
       @media (min-width: 600px) and (max-width: 1024px) {
         .domain-pill img {
           margin-bottom: 0;
-          margin-top: 5px;
+          padding-top: 3px;
         }
       }
       @media only screen and (max-width: 580px) {
@@ -59,7 +59,7 @@
         }
       }
 
-      @media only screen and (max-width: 480px) {
+      @media only screen and (max-width: 580px) {
         table[class="contentInner"] {
           width: 100% !important;
           padding: 0px;
@@ -159,13 +159,13 @@
           line-height: 100% !important;
         }
       }
-      @media only screen and (max-width: 480px) {
+      @media only screen and (max-width: 580px) {
         .zpImage {
           height: auto !important;
           width: 100% !important;
         }
       }
-      @media only screen and (max-width: 480px) {
+      @media only screen and (max-width: 580px) {
         .contentInner,
         .cols,
         .zpAlignPos {
@@ -173,7 +173,7 @@
           max-width: 100% !important;
         }
       }
-      @media only screen and (max-width: 480px) {
+      @media only screen and (max-width: 580px) {
         .paddingcomp {
           padding-left: 15px !important;
           padding-right: 15px !important;
@@ -185,7 +185,7 @@
           max-width: 320px !important;
         }
       }
-      @media screen and (max-width: 480px) {
+      @media screen and (max-width: 580px) {
         .tmplheader,
         .tmplfooter {
           width: 100% !important;
