project-flag: margin-top added

--- a/Feature Snippet/index.html
+++ b/Feature Snippet/index.html
@@ -1627,6 +1627,7 @@
                                             style="
                                               width: 15px;
                                               height: 15px;
+                                              margin-top: 2px;
                                               margin-bottom: 1px;
                                               margin-right: 3px;
                                               vertical-align: middle;
