project-logo: class added

--- a/Feature Snippet/index.html
+++ b/Feature Snippet/index.html
@@ -50,6 +50,10 @@
           margin-right: 4px; /* Reduce margin */
         }
 
+        .project-logo {
+          margin-top: 1px;
+        }
+
         .domain-pill {
           display: inline-block; /* Stack the pills on top of each other */
         }
@@ -1623,6 +1627,7 @@
                                           </span>
                                           <img
                                             src="https://res.cloudinary.com/dyqzbz8jk/image/upload/v1729773942/Infidigit_Favicon_1_1_a44ogn.png"
+                                            class="project-logo"
                                             alt="Project Logo"
                                             style="
                                               width: 15px;
